<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/b3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="85dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cover"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="@color/button_color"
            android:text="@string/register_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="220dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/ll_register"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_mobile"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/et_phoneNum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_email"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_loginname"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/et_loginName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/et_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_pwd"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:id="@+id/et_newPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:textColor="#90ffffff"
                android:text="@string/register_tv_comfirmpwd"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:id="@+id/et_confirmNewPassword"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="150dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                android:id="@+id/cardview"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                >
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@color/denglu_btn_color"

                    android:text="@string/register_btn_re"
                    android:textColor="#ffff"
                    android:textSize="20sp"/>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_register"
        android:id="@+id/register_skip"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/denglu_btn_color"
        android:text="@string/register_tv_turnlogin"/>
</RelativeLayout>