<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/b3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/cover"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:textColor="@color/button_color"
            android:text="@string/login_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:background="#90ffffff"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#95ffffff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/per"
                    android:layout_marginTop="10dp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="42dp"

                    android:paddingStart="5dp"
                    android:textSize="20dp"
                    android:hint="@string/login_et_loginname"
                    android:id="@+id/et_username"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#95ffffff"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lock"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"

                    />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_pwd"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:paddingStart="5dp"
                    android:textSize="20dp"
                    android:hint="@string/login_et_pwd"
                    android:inputType="numberPassword"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="8dp"
                android:paddingEnd="5dp"
                android:textSize="15dp"
                android:text="@string/login_getpwd"
                />
            <android.support.v7.widget.CardView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="150dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="40dp"
                android:id="@+id/cardview"
                android:background="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                >
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:background="@color/denglu_btn_color"
                    android:text="@string/login_btn_login"
                    android:textColor="#ffff"
                    android:textSize="20sp"/>
            </android.support.v7.widget.CardView>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/tv_register"
               android:textColor="@color/denglu_btn_color"
               android:layout_below="@+id/cardview"
               android:layout_alignLeft="@+id/cardview"
               android:layout_marginTop="20dp"
               android:layout_marginLeft="55dp"
               android:textSize="20dp"
               android:text="@string/login_tv_register"
               />
       </RelativeLayout>
    </LinearLayout>
</RelativeLayout>