<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:id="@+id/cv_modify"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99ffffff"
            >
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/iv_modifyimage"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_modifypic"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/integral_image"
                android:visibility="gone"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_modifyimage"
                android:text="@string/item_modifylabel_tv_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_modifylabel"
                android:layout_toEndOf="@+id/iv_modifyimage"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:text="@string/item_modifylabel_tv_labelinfo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/integral_add"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:textColor="#c5e74d4d"
                android:textSize="22sp"
                android:layout_marginEnd="5dp"
                android:paddingBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/iv_modifyimage"
                android:layout_alignTop="@+id/tv_modifytime"
                android:id="@+id/texttime"
                android:text="@string/item_modifylabel_tv_modifytime"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/texttime"
                android:layout_alignBottom="@+id/iv_modifyimage"
                android:id="@+id/tv_modifytime"
                android:paddingBottom="10dp"
                android:text="xxxx"
                />
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true">
                <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_deletelabel"
                    android:text="@string/item_modifylabel_btn_delete"

                    android:textColor="#f3f4f5"
                    android:textSize="18sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="#f51f1f"/>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>